--- a/src/assets/styles/components.less
+++ b/src/assets/styles/components.less
@@ -43,6 +43,7 @@
   .card {
 	background-color: #EEEEEE;
 	width: 450px;
+
   }
 
   &-nearby {
@@ -68,6 +69,12 @@
 	transition: transform 0.2s;
 	cursor: pointer;
   }
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
