--- a/src/assets/styles/components.less
+++ b/src/assets/styles/components.less
@@ -38,7 +38,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-color: lightcoral;
+  background-color: #FBDDDD;
 
   .card {
 	background-color: #EEEEEE;
